# dgfx

./: .clang-format  .gitignore  CMakeLists.txt  Licence.txt  Readme.md  config.xml  imgui.ini  pyproject.toml  setup.py  start.bat
dgfx/: bake_noise.hpp  camera.hpp  common.h  embree.hpp  file_io.hpp  font.hpp  gfx_jit.hpp  gfx_utils.hpp  gizmo.hpp  jit.hpp  pass2d_template.hpp  sexpr.hpp  utils.hpp  xml_config.hpp
experiments/: CMakeLists.txt  ao_experiment.cpp  ddgi_experiment.cpp  specular_experiment.cpp  toy_experiment.cpp
scenes/human_bust_sculpt/: license.txt  scene.gltf
scenes/medieval_weapon_market/: license.txt  scene.gltf
scenes/modular_lowpoly_medieval_environment/: license.txt
scenes/roman_sphinx/: license.txt  scene.gltf
shaders/: atmosphere.hlsli  bake_noise.comp  cube.comp  ddgi_probe.frag  ddgi_probe.vert  debug_rt.comp  envbrdf.hlsl  material.h  pbr.frag  pbr.vert  shadow.frag  shadow.vert  triangle.frag  triangle.vert  write_texture_to_buffer.comp
shaders/gizmo/: glyph.frag  glyph.vert  line.frag  line.vert  simple.frag  simple.vert
sjit/: sjit.hpp
src/: ao_experiment.cpp  ddgi_experiment.cpp  file_io.cpp  jit_test.cpp  main.cpp  specular_experiment.cpp
